visual - doc spacing fix for algolia search (#861)
* visual - doc spacing fix for algolia search

* Delete package-lock.json

* Revert "Delete package-lock.json"

This reverts commit dfb62388d10154bd5d44bcf77ba4e7a4c442d5fa.

* Revert "visual - doc spacing fix for algolia search"

This reverts commit 4f9ae7571f54626467f6570be105db1779759c16.

* Update custom.css

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -189,3 +189,15 @@
   display: block;
   width: 120px;
 }
+
+@media (min-width: 769px) and (max-width: 996px) {
+  .navbar__item.navbar-github-link {
+    margin-right: 160px;
+  }
+}
+
+@media (max-width: 768px) {
+.navbar__item.navbar-github-link {
+  margin-right: 40px;
+}
+}
